<resources>
    <string name="app_name">TipCalculator-Amons</string>
    <!--activity_main.xml -->
    <string name="check_total_edit_text_hint_label">Enter check total</string>
    <string name="num_of_poeple_edit_text_hint_label">Enter the # of people to split the check with</string>
    <string name="percent_10_label">10%</string>
    <string name="percent_15_label">15%</string>
    <string name="percent_20_label">20%</string>
    <string name="custom_percent_label">Custom Percent</string>
    <string name="reset_label">Reset</string>
    <string name="calculate_tip_label">Calculate Tip</string>
    <string name="current_tip_percent_0_label">Current Tip Percentage: 0%</string>
    <!--activity_custom_tip.xml -->
    <string name="custom_tip_edit_text_hint_label">Enter Custom Tip Value</string>
    <string name="confirm_label">Confirm</string>
    <!--activity_display_tip.xml -->
    <string name="tip_amount_label">Tip Amount:</string>
    <string name="total_without_tip_label">Total Not Including Tip:</string>
    <string name="total_with_tip_label">Total Including Tip:</string>
    <string name="total_per_person_label">Total Per Person Including Tip:</string>
    <!--MainActivity.java -->
    <string name="enter_check_total_error_label">Enter check total</string>
    <string name="check_total_less_than_0_error_label">Check total cannot be less than or equal to 0</string>
    <string name="enter_number_of_people_error_label">Enter number of people to split check with</string>
    <string name="num_of_people_less_than_1_error_label">Number of people cannot be less than 1</string>
    <string name="tip_percent_less_than_0_error_label">Tip percent cannot be less than or equal to 0</string>
    <string name="current_tip_percent_label">Current Tip Percentage:</string>
    <string name="error_message_title_label">Error</string>
    <string name="error_message_close_button_label">Close</string>
    <!--customTipActivity.java -->
    <string name="empty_percent_error_label">Empty Percent Field</string>
</resources>